--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.11.3"
+bevy_mod_picking = { version = "0.15.0", default-features = false, features = ['backend_raycast', 'selection', 'highlight'] }
